// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`version v1 yarn.lock 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1


\\"@babel/code-frame@^7.0.0\\", \\"@babel/code-frame@^7.10.1\\":
  version \\"7.10.1"
`;

exports[`version v2 meta-only.lock 1`] = `
"__metadata:
  version: 4
"
`;

exports[`version v2 yarn.lock 1`] = `
"__metadata:
  version: 4

\\"library@npm:>=1.0.0, library@npm:>=1.1.0\\":
  version: 3.0.0
  resolution: \\"library@npm:3.0.0\\"
  checksum: 2/6fc98369f954229cbb6e4ce1a"
`;

exports[`version v3 meta-only.lock 1`] = `
"__metadata:
  version: 6
  cacheKey: 8
"
`;

exports[`version v3 yarn.lock 1`] = `
"__metadata:
  version: 6
  cacheKey: 8

\\"@bluelovers/fast-glob@npm:^3.0.4\\":
  version: 3.0.4
  resolution: \\"@bluelovers/fast-glob@npm:3.0.4\\"
  dependencies:
   "
`;

exports[`version v3 yarn-version-7.lock 1`] = `
"__metadata:
  version: 7
  cacheKey: 9

\\"@actions/core@npm:^1.2.6\\":
  version: 1.2.6
  resolution: \\"@actions/core@npm:1.2.6\\"
  checksum: 034e57fcb5f944d5fb0ef55"
`;
